--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Nueva carpeta/index.html
 Nueva carpeta/style.css
 Nueva carpeta/Img/arbol-1.jpg
 Nueva carpeta/Img/arbol-2.jpg
+Nueva carpeta/Img/arbol-3.jpg
