--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Nueva carpeta/style.css
 Nueva carpeta/Img/arbol-1.jpg
 Nueva carpeta/Img/arbol-2.jpg
 Nueva carpeta/Img/arbol-3.jpg
+JavaScript/variables-y-basico.js
+.vscode/launch.json
