--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Nueva carpeta/Img/arbol-2.jpg
 Nueva carpeta/Img/arbol-3.jpg
 JavaScript/variables-y-basico.js
 .vscode/launch.json
+Nueva carpeta/main.js
